--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,27 +28,29 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 }
 
 dependencies {
-    implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.9.20'))
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.20')
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.airbnb.android:lottie:6.0.1'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.8.1'
-    implementation 'androidx.activity:activity-ktx:1.9.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.9.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.9.0'
+    implementation 'androidx.activity:activity-ktx:1.10.1'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-    implementation 'com.google.firebase:protolite-well-known-types:18.0.0'
+    implementation 'com.google.firebase:protolite-well-known-types:18.0.1'
     implementation 'com.github.vipulasri:timelineview:1.1.5'
     implementation project(':passcodeview')
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
-
