--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.6.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22'
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
